--- a/QR_Gen/package.json
+++ b/QR_Gen/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "babel src --out-dir lib",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/routes/index.js"
+    "start": "nodemon src/routes/index.js",
+    "postinstall": "mv ./src/models/User.js ./src/models/user.js"
   },
   "author": "",
   "license": "ISC",
